# nop

./: .gitignore  .project_env  CMakeLists.txt  NOTES.md  README.md
docs/: doxygen.cfg
src/: CMakeLists.txt  README.md  common.h  errors.c  errors.h  main.c  memory.c  memory.h  parser.y  ptrlst.c  ptrlst.h  scanner.l
src/ast/: CMakeLists.txt  README.md  array_initializer.c  array_initializer.h  array_parameter.c  array_parameter.h  array_parameter_list.c  array_parameter_list.h  array_reference.c  array_reference.h  assignment.c  assignment.h  ast.c  ast.h  ast_enums.h  ast_headers.h  ast_includes.h  ast_typedefs.h  break_statement.c  break_statement.h  case_clause.c  case_clause.h  case_clause_intermediate_list.c  case_clause_intermediate_list.h  case_clause_list.c  case_clause_list.h  cast_specifier.c  cast_specifier.h  class_definition.c  class_definition.h  class_definition_item.c  class_definition_item.h  class_definition_list.c  class_definition_list.h  class_name.c  class_name.h  class_name_parent.c  class_name_parent.h  compound_name.c  compound_name.h  (+130 more)
src/ast/.boilerplate/: ast.c  ast.h  ast_enums_template.txt  ast_includes_template.txt  ast_typedefs_template.txt  boilerplate.md  cfile_template.txt  hfile_template.txt  mkall.py  other_stuff.txt
src/ast/backup/: README.md  ast.h
src/import/: CMakeLists.txt  README.md  import.c  import.h
src/old/: class.c  class.h  compound_name.c  compound_name.h  constant_expression.c  constant_expression.h  dumper.c  dumper.h  expression_factor.h  func_declaration.c  func_declaration.h  namespace.c  namespace.h  parameter_decl.c  parameter_decl.h  parser.y  struct.c  struct.h  symbol.c  symbol.h  type_name.c  type_name.h
tests/: README.md  bootstrap.n  bootstrap.nop  class_decl.nop  expr_assignment.nop  fibonacci.nop  func_body_for.nop  func_body_if.nop  func_body_misc.nop  func_body_switch.nop  func_body_try.nop  func_body_while.nop  func_decl.n  func_decl.nop  func_definition.nop  module.nop  struct_decl.n  struct_decl.nop
